2007/10/23
	28. Class HumanoidDynamicMultiBody now virtually derives from DynamicMultiBody.
	    Changes for users:
	      - HumanoidDynamicMultiBody::getDynamicMultiBody() has been removed.
	      - Prototypes of HumanoidDynamicMultiBody constructors have been slightly modified.
	    

2007/09/20
	
	27. Added the files necessary for the Spirit VRML reader.
	26. Make constructors of JointFreeflyer, JointRotation and JointTranslation public.
	25. Remove const in Joint::addChildJoint (const CjrlJoint& inJoint) in order to be able to modify joints in kinematic chain.
	24. Joint::parentJoint() and Joint::childJoint(unsigned int inJointRank) return pointer to CjrlJoint instead of reference.
	23. Added file include/dynamicsJRLJapan/robotDynamicsImpl.h
	22. Move headers to include/dynamicsJRLJapan instead of include/robotDynamicsJRLJapan
	21. Undo item 20
	20. Export in dynamicsJRLJapan.pc name of classes implementing 
	  - abstractRobotDynamics::CjrlDynamicRobot,
	  - abstractRobotDynamics::CjrlHumanoidDynamicRobot
	  - freeFlying joint,
	  - rotation joint,
	  - translation joint.
	19. Use name "dynamicsJRLJapan" as package name and documentation directory installation.
	
dynamics-JRLJapan 1.4 released July 16, 2007

	18. (fumio) bug fix for values of rotation field in VRML.
	17. (fumio) add default implementations for
        CjrlDynamicRobot::upperBoundDof(int, const vectorN&) and
        CjrlDynamicRobot::lowerBoundDof(int, const vectorN&).

dynamics-JRLJapan 1.3.1 released July 6, 2007

	16. (oussama) Use the wrist joint in
	LinkBetweenJointsAndEndEffectorSemantic() instead of the hand
	joint.
	
dynamics-JRLJapan 1.3 released June 27, 2007

	15. Added separate doc and install-doc targets.
	14. skips comment lines in VRML files.
	13. fix bug in calculation of w and dq in
	DynamicMultiBody::FiniteDifferenceStateUpdate().

dynamics-JRLJapan 1.2 released June 14, 2007

	12. renamed hand related methods to wrist related methods
	(according to abstract interface).